# HuffmanEncoding

./: .rustc_info.json  Cargo.toml  README.md  TODO.md  fd  justfile
.github/workflows/: rust.yml
benches/: compressor_benches.rs
src/: cli.rs  encoding.rs  lib.rs  main.rs
src/application/: input.rs  parser.rs
src/encoding/: huffman.rs
src/encoding/huffman/: encoder.rs  mod.rs  tree.rs
test_data/: Ulysses.txt  test.txt
