[package]
name = "compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1", features = ["serde"] }
rmp-serde = "1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.24", features = ["derive"] }
rayon = "1.7"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "compressor_benches"
harness = false
